--- a/app/src/main/res/layout/main_page_fragment.xml
+++ b/app/src/main/res/layout/main_page_fragment.xml
@@ -96,13 +96,13 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.792" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/addNewButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="36dp"
             android:layout_marginEnd="4dp"
-            android:background="@color/white"
+            android:background="@color/purple_200"
             android:text="Add new subject"
             android:textSize="9sp"
             app:layout_constraintEnd_toEndOf="parent"
