--- a/app/src/main/res/layout/subject_row.xml
+++ b/app/src/main/res/layout/subject_row.xml
@@ -54,6 +54,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginBottom="68dp"
+                android:textColor="@color/teal_200"
                 android:text="updated at"
                 android:textSize="9sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -75,6 +76,7 @@
                 android:id="@+id/grades"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/teal_200"
                 android:layout_marginStart="12dp"
                 android:layout_marginBottom="24dp"
                 android:text="x, x, x, x"
@@ -104,7 +106,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="12dp"
-                android:background="@color/white"
+                android:background="@null"
                 android:src="@drawable/ic_baseline_delete_24"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
